hotfix on 2.5.2 - email rendering issue
git-svn-id: https://plugins.svn.wordpress.org/wysija-newsletters/tags/2.5.2@732836 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/tools/styles/css-email.html
+++ b/tools/styles/css-email.html
@@ -23,5 +23,5 @@ body, {#wysija_container} {
     unicode-bidi:embed;{/if}
 }
 table { border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; }
-table td { border-collapse: collapse; mso-table-lspace:0pt; mso-table-rspace:0pt; }
+table td { border-collapse: collapse; }
 div, p, a, li, td { -webkit-text-size-adjust:none; }
